# vla_train_data_adapter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: collect_teleop.py  generate_sample_data.py
sim/: Dockerfile  README.md  generate_data.py  requirements.txt  run.sh  setup_assets.sh  visualize.py
sim/envs/: __init__.py  pick_place.py
sim/policies/: __init__.py  ik_solver.py  scripted.py
tests/: test_normalization.py  test_pipeline.py  test_schema.py
vla_data_adapter/: __init__.py  cli.py  pipeline.py
vla_data_adapter/exporters/: __init__.py  base.py  groot.py  lerobot.py  openpi.py
vla_data_adapter/normalization/: __init__.py  normalizer.py
vla_data_adapter/schema/: __init__.py  episode.py
vla_data_adapter/sources/: __init__.py  base.py  droid.py  libero.py  mujoco_sim.py  real_robot.py
