[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-data-adapter"
version = "0.1.0"
description = "统一机器人 VLA 训练数据转换框架"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24",
    "Pillow>=9.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
all = [
    "h5py>=3.8",
    "av>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
vla-adapter = "vla_data_adapter.cli:main"

[tool.setuptools.packages.find]
include = ["vla_data_adapter*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
